--- a/frontend/src/styles/AttendanceTakingPage.module.css
+++ b/frontend/src/styles/AttendanceTakingPage.module.css
@@ -8,4 +8,12 @@
 
 .sessionCard {
   cursor: pointer;
+  width: rem(300px);
+
+  @mixin hover {
+    background-color: light-dark(
+      var(--mantine-color-gray-0),
+      var(--mantine-color-dark-5)
+    );
+  }
 }
