feat: include group name

--- a/frontend/src/styles/SessionAttendanceTaking.module.css
+++ b/frontend/src/styles/SessionAttendanceTaking.module.css
@@ -2,8 +2,9 @@
   padding-top: rem(30px);
 }
 
-.title {
-  padding-bottom: rem(30px);
+.sessionInfo {
+  width: rem(500px);
+  margin: 0 auto;
 }
 
 .table {
