feat: implement rule creator email (#324)

--- a/backend/internal/intervention/user_html_email.tmpl
+++ b/backend/internal/intervention/user_html_email.tmpl
@@ -4,9 +4,9 @@ OAMS has identified that you have failed certain attendance rules set by your co
 Your respective course coordinators have also been notified.
 
 The details of the failed checks are provided below:
-{{ range .Rules }}- {{ .Title }}: {{ .Description }}{{ end }}
-
+{{ range .Rules }}- {{ .Title }}: {{ .Description }}
+{{ end }}
 Please contact your course coordinator(s) for more details and follow-up actions.
-
 We wish you best of luck in your studies.
+
 OAMS
